# CEmergent

./: .gitignore  README.md  help_file.md
Capture/: CEmergent.cpp  Makefile  cam_viewer.py  ecapture.py  emergent.py  run.sh  run_obs.py  test.py
test/: CEmergent.cpp  CMakeLists.txt  Makefile  boolParam.conf  datamember.cpp  datamember.cpp~  emergent.py  enumParam.conf  func_overload.cpp  hello_ext.cpp  matrix_class.cpp  matrix_class.cpp~  run.sh  stringParam.conf  test.py  uint32Param.conf
test2/: Makefile  test.py
